# papyrus

./: .gitignore  .gitmodules  .travis.yaml  .travis.yml  404.html  CHANGELOG.md  Cargo.toml  LICENSE  NOTES.md  PUBLISHING-PROCEDURE.md  README.md  README.tpl  api.cmds.html  api.code.html  api.html  api.linking.html  api.output.html  api.repl.html  azul-playground.rs  book.toml  build.rs  index.html  intro.html  modoc.config  pass_build_push.sh  print.html  searchindex.js  searchindex.json  test-script.sh
.cargo/: config
.github/actions/build-external-crate/: action.yml
.github/workflows/: coverage.yml  mdbook.yml  metadata.yml  rust.yml  rustfmt.yml
benches/: benches.md  benches.rs  compilation.rs
book-src/: SUMMARY.md  cli-rc.md  file-interaction.md  installation.md  vision.md
docs/: SUMMARY.md  book.toml  changelog.html  chapter_1.html  cli-rc.html  commands.html  commands.md  file-interaction.html  index.html  installation.html  print.html  repl.html  searchindex.js  searchindex.json  vision.html
docs-src/: SUMMARY.md  changelog.md  cli-rc.md  commands.md  file-interaction.md  repl.md
docs-src/repl/: linking.md
docs/modocs/: cmds.md  code.md  commands.md  linking.md  output.md  repl.md
docs/src/: SUMMARY.md  api.cmds.md  api.code.md  api.linking.md  api.md  api.output.md  api.repl.md  intro.md  output.md
examples/: async.rs  custom-cmds.rs  data-borrowing.rs  mutating.rs  output-stdio.rs  push-input.rs
pad/: .gitignore
pad/benches/: benches.rs
pad/src/: history.rs
papyrus/: .gitignore  CHANGELOG.md  Cargo.toml  feature-check.cmd
papyrus-pad/: .gitignore  Cargo.toml
papyrus-pad/benches/: benches.rs
papyrus-pad/src/: ansi_renderer.rs  colour.rs  completion.rs  css.rs  eval_state.rs  history.rs  lib.rs  main.rs  mods_tree.rs  pad.rs  path_tree.rs  prompt.rs  repl_terminal.rs  styles.rs
papyrus-pad/src/pad/: eval_state.rs  mod.rs  repl_terminal.rs
papyrus-pad/src/widgets/: mod.rs
papyrus-pad/src/widgets/pad/: repl_terminal.rs
papyrus-pad/styles/: test.css
papyrus/benches/: benches.rs
papyrus/examples/: async.rs  data-borrowing.rs  mutating.rs  output-file.rs  output-stdio.rs
papyrus/examples-switched-off/: async.rs  data-borrowing.rs  mutating.rs
papyrus/src/: code.rs  fmt.rs  lib.rs  linking.rs  main.rs  run.rs
papyrus/src/cmds/: mod.rs
papyrus/src/compile/: build.rs  construct.rs  execute.rs  mod.rs
papyrus/src/complete/: cmdr.rs  code.rs  combined.rs  mod.rs  modules.rs
papyrus/src/input/: mod.rs  parse.rs  tests.rs
papyrus/src/output/: any_state.rs  mod.rs  printer.rs  read.rs  write.rs
papyrus/src/pfh/: code.rs  linking.rs  mod.rs
papyrus/src/pfh/compile/: construct.rs  mod.rs
papyrus/src/repl/: any_state.rs  cmds.rs  data.rs  eval.rs  mod.rs  print.rs  read.rs  run.rs
papyrus/src/run/: interface.rs  mod.rs
papyrus/test-resources/external_crate/: Cargo.toml
papyrus/tests/: macros.rs
scripts/: build-external-crate.sh  build-test-docs.sh  ci-sim.sh  linux-test.sh  test-all-features.sh  test-default-features.sh  test-format-feature.sh  test-no-features.sh  test-racer-completion-feature.sh  test-run-all.sh  test-runnable-feature.sh  win-test.cmd
src/: code.rs  compile.rs  contextmenu.rs  file.rs  fmt.rs  lib.rs  linking.rs  main.rs  papyrus-pad.rs  version.rs
src/cmds/: mod.rs
src/compile/: build.rs  construct.rs  execute.rs  mod.rs
src/complete/: cmdr.rs  code.rs  modules.rs
src/file/: mod.rs
src/input/: file.rs  mod.rs  parse.rs  tests.rs
src/output/: any_state.rs  mod.rs  read.rs  write.rs
src/papyrus_pad/: main.rs
src/pfh/: code.rs  compile.rs  linking.rs  mod.rs
src/pfh/compile/: build.rs  construct.rs  execute.rs  mod.rs
src/pfh/file/: code.rs  mod.rs
src/repl/: any_state.rs  cmds.rs  command.rs  data.rs  eval.rs  linking.rs  mod.rs  print.rs  read.rs  state.rs  tests.rs  writer.rs
src/run/: interface.rs  mod.rs  tests.rs
src/widgets/: color.rs  mod.rs  pad.rs  repl_terminal.rs
src/widgets/pad/: css.rs  eval_state.rs  mod.rs  repl_terminal.rs
styles/: test.css
test-resources/: libpapyrus_extern_test.rlib
test-resources/external_crate/: Cargo.toml
test-resources/external_crate/src/: lib.rs
test-resources/external_kserd/: Cargo.toml
test-resources/external_kserd/src/: lib.rs
test-src/: count_files.rscript  dir.rscript  expr-list.rscript  expr.rscript  items.rscript  one.rscript  pwr.rs  use_rand.rscript  with-crate.rs
tests/: a_src_file.rs  file.rs  macros.rs  repl-api.rs
