[package]
name = "papyrus"
version = "0.7.0"
authors = ["kurt <kurtlawrence92@gmail.com>"]
description = "A rust repl and script runner"
license = "MIT"
homepage = "https://github.com/kurtlawrence/papyrus"
repository = "https://github.com/kurtlawrence/papyrus"
documentation = "https://docs.rs/papyrus/"
readme = "README.md"
keywords = [ "repl", "script" ]
edition = "2015"

[badges]
travis-ci = { repository = "kurtlawrence/papyrus" }

[features]
azul-widgets = [ "azul", "cansi" ]

[dependencies]
dirs = "1.0"
linefeed = { git="https://github.com/kurtlawrence/linefeed", rev = "e66e1ea0477fc2d298a4cca5f84800da858d3e14" }
log = "0.4"
syn = {	version = "0.15", default-features = false,	features =  [ "full" ] }
simplelog = "0.5"
colored = "1.7"
term_cursor = "0.2"
reqwest = "0.9"
azul = { path = "../azul/azul", optional = true }
cansi = { version = "1.1", optional = true }
libloading = "0.5"
cratesiover = "2.2"
cmdtree = { path = "../cmdtree" }
shh = "1.0"

[dev-dependencies]
# criterion = "0.2"

# Currently disabled.
# [[bench]]
# name = "benches"
# harness = false

[[bin]]
name = "papyrus"
path = "src/main.rs"

[[bin]]
name = "papyrus-pad"
path = "src/papyrus-pad.rs"
required-features = [ "azul-widgets" ]

[[bin]]
name = "azul-playground"
path = "azul-playground.rs"
required-features = [ "azul-widgets" ]
