[package]
name = "papyrus"
version = "0.8.0"
authors = ["kurt <kurtlawrence92@gmail.com>"]
description = "A rust repl and script runner"
license = "MIT"
homepage = "https://github.com/kurtlawrence/papyrus"
repository = "https://github.com/kurtlawrence/papyrus"
documentation = "https://docs.rs/papyrus/"
readme = "README.md"
keywords = [ "repl", "script" ]
edition = "2018"

[badges]
travis-ci = { repository = "kurtlawrence/papyrus" }

[features]
azul-widgets = [ "azul", "cansi" ]

[dependencies]
# My crates
linefeed = { git = "https://github.com/kurtlawrence/linefeed" }
# linefeed = { path = "../linefeed" }
# azul = { git = "https://github.com/kurtlawrence/azul.git", optional = true }
azul = { path = "../azul/azul", optional = true }
cansi = { version = "2.0", optional = true }
cratesiover = "2.2"
cmdtree = "0.5"
shh = "1.0"

# crates.io
dirs = "1.0"
log = "0.4"
syn = {	version = "0.15", default-features = false,	features =  [ "full" ] }
simplelog = "0.5"
colored = "1.7"
term_cursor = "0.2"
reqwest = "0.9"
libloading = "0.5"
crossbeam = "0.7"

[[bin]]
name = "papyrus"
path = "src/main.rs"

[[bin]]
name = "papyrus-pad"
path = "src/papyrus-pad.rs"
required-features = [ "azul-widgets" ]

[[bin]]
name = "azul-playground"
path = "azul-playground.rs"
required-features = [ "azul-widgets" ]

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "benches"
harness = false