[package]
name = "papyrus"
version = "0.17.3"
authors = ["kurt <kurtlawrence92@gmail.com>"]
description = "A rust repl and script runner"
license = "MIT"
homepage = "https://github.com/kurtlawrence/papyrus"
repository = "https://github.com/kurtlawrence/papyrus"
documentation = "https://docs.rs/papyrus/"
readme = "README.md"
keywords = [ "repl", "script" ]
edition = "2018"

[badges]
codecov =   { repository = "kurtlawrence/papyrus" }

[dependencies]
# My crates
cmdtree =	    { version = "0.10",	default-features = false }
kserd =		    { version = "0.5",	default-features = false,   optional = false,	features = [ "format" ] }

# crates.io
backtrace =	    { version = "0.3",	default-features = false,   optional = false,	features = [ "std" ] }
blake3 =	    { version = "1.0",	default-features = true }
colored =	    { version = "2",	default-features = false }
crossbeam-channel = { version = "0.5",	default-features = true } # enable 'std' featureset
crossterm =	    { version = "0.21",	default-features = false,   optional = true }
dirs =		    { version = "3",	default-features = false }
fxhash =	    { version = "0.2",	default-features = false }
glob =		    { version = "0.3",	default-features = false }
libloading =	    { version = "0.7",	default-features = false }
log =		    { version = "0.4",	default-features = false }
quote = { version = "1.0",	default-features = false }
racer =		    { version = "2.1.48",	default-features = false,   optional = true,	features = [ "metadata" ] }
syn =		    { version = "1.0.75",	default-features = false,   optional = false,	features = [ "full", "printing", "parsing" ] }
uuid =		    { version = "0.8",	default-features = false,   optional = false,	features = [ "v4" ] }

[dev-dependencies]
criterion = "0.3"
term_cursor = "0.2"
term_size = "0.3"

[[bench]]
name = "benches"
harness = false

[features]
default = [ "format", "racer-completion", "runnable" ]
# format snippets with rustfmt binary
format = [] 
# add code completion using racer, requires nightly
racer-completion = [ "racer" ]
# allows to just run the repl
runnable = [ "crossterm" ]
# extra interface tests that won't work with CI
test-runnable = []

[[bin]]
name = "papyrus"
path = "src/main.rs"
required-features = [ "runnable" ]

[profile.release]
lto = true
codegen-units = 1

[[example]]
name = "custom-cmds"
required-features = [ "runnable" ]
