[package]
name = "papyrus-pad"
version = "0.0.1"
authors = ["kurt <kurtlawrence92@gmail.com>"]
edition = "2018"

[dependencies]
# papyrus -- for now just links the folder. Once stabilised can link the crates.io ver
papyrus = { path = "../papyrus" }
azul = { path = "/azul/azul" }
azul-theming = { path = "/azul-theming" }
cansi = "2.0"
# fxhash = "0.2"

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "benches"
harness = false