[package]
name = "papyrus-pad"
version = "0.0.1"
authors = ["kurt <kurtlawrence92@gmail.com>"]
edition = "2018"

[dependencies]
# papyrus -- for now just links the folder. Once stabilised can link the crates.io ver
papyrus = { path = "../papyrus",	default-features = false,	features = [ "racer-completion" ] }
azul = { path = "/azul/azul" }
azul-theming = { path = "/azul-theming" }
# cansi = "2.0"
cansi = { path = "/cansi" }

[dev-dependencies]
criterion = "0.2"
colored = "1"

[[bench]]
name = "benches"
harness = false