[package]
name = "papyrus"
version = "0.8.0"
authors = ["kurt <kurtlawrence92@gmail.com>"]
description = "A rust repl and script runner"
license = "MIT"
homepage = "https://github.com/kurtlawrence/papyrus"
repository = "https://github.com/kurtlawrence/papyrus"
documentation = "https://docs.rs/papyrus/"
readme = "README.md"
keywords = [ "repl", "script" ]
edition = "2018"

[badges]
travis-ci = { repository = "kurtlawrence/papyrus" }

[dependencies]
# My crates
cmdtree = 			{ version = "0.8",		default-features = false }
cratesiover =		{ version = "2",		default-features = false,	optional = true }
shh = 				{ version = "1",		default-features = false }

# crates.io
colored = 			{ version = "1",		default-features = false }
crossbeam-channel =	{ version = "0.3",		default-features = false }
crossbeam-utils =	{ version = "0.6",		default-features = false }
dirs = 				{ version = "1",		default-features = false }
fxhash = 			{ version = "0.2",		default-features = false }
libloading =		{ version = "0.5",		default-features = false }
linefeed = 			{ path = "/linefeed",	default-features = false,	optional = true }
log = 				{ version = "0.4",		default-features = false }
racer = 			{ version = "2.1",		default-features = false,	optional = true,	features = [ "metadata" ] }
syn = 				{ version = "0.15",		default-features = false,	optional = false,	features =  [ "full" ] }
term_cursor =		{ version = "0.2",		default-features = false,	optional = true }

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "benches"
harness = false

[features]
default = [ "runnable", "racer-completion" ]
# allows to just run the repl
runnable = [ "cratesiover", "linefeed", "term_cursor" ]
# requires nightly
racer-completion = [ "racer" ]

[[bin]]
name = "papyrus"
path = "src/main.rs"
required-features = [ "runnable" ]