[package]
name = "papyrus"
version = "0.11.0"
authors = ["kurt <kurtlawrence92@gmail.com>"]
description = "A rust repl and script runner"
license = "MIT"
homepage = "https://github.com/kurtlawrence/papyrus"
repository = "https://github.com/kurtlawrence/papyrus"
documentation = "https://docs.rs/papyrus/"
readme = "../README.md"
keywords = [ "repl", "script" ]
edition = "2018"

[badges]
travis-ci = { repository = "kurtlawrence/papyrus" }
codecov =   { repository = "kurtlawrence/papyrus" }

[dependencies]
# My crates
cmdtree =	    { version = "0.10",	default-features = false }
kserd =		    { version = "0.1",	default-features = false,   optional = false,	features = [ "format" ] }
shh =		    { version = "1",	default-features = false }

# crates.io
colored =	    { version = "1",	default-features = false }
crossbeam-channel = { version = "0.3",	default-features = false }
crossbeam-utils =   { version = "0.6",	default-features = false }
crossterm =	    { version = "0.10",	default-features = false,   optional = true,	features = [ "cursor", "terminal" ] }
dirs =		    { version = "2",	default-features = false }
fxhash =	    { version = "0.2",	default-features = false }
libloading =	    { version = "0.5",	default-features = false }
log =		    { version = "0.4",	default-features = false }
mortal =	    { version = "0.2",	default-features = false,   optional = true }
racer =		    { version = "2.1",	default-features = false,   optional = true,	features = [ "metadata" ] }
rustfmt-nightly =   { version = "1.4",	default-features = false,   optional = true }
syn =		    { version = "1",	default-features = false,   optional = false,	features = [ "full", "printing", "parsing" ] }

[dev-dependencies]
criterion = "0.3"
term_cursor = "0.2"
term_size = "0.3"

[[bench]]
name = "benches"
harness = false

[features]
default = [ "format", "racer-completion", "runnable" ]
# format snippets with rustfmt, may require nightly to build
format = [ "rustfmt-nightly" ]
# add code completion using racer, requires nightly
racer-completion = [ "racer" ]
# allows to just run the repl
runnable = [ "crossterm", "mortal" ]

[[bin]]
name = "papyrus"
path = "src/main.rs"
required-features = [ "runnable" ]

[profile.release]
lto = true
codegen-units = 1

[[example]]
name = "custom-cmds"
required-features = [ "runnable" ]
